@@ -337,15 +337,13 @@ buildjoin (char const *initialfile)
    All unlinking of ‘initialfile’, ‘rev2’, and ‘rev3’
    should be done by ‘tempunlink’.  */
 {
-  struct buf commarg;
-  struct buf subs;
   char const *rev2, *rev3;
   int i;
   char const *cov[10], *mergev[11];
   char const **p;
+  size_t len;
+  char *subs = NULL;
 
-  bufautobegin (&commarg);
-  bufautobegin (&subs);
   rev2 = maketemp (0);
   rev3 = maketemp (3);      /* ‘buildrevision’ may use 1 and 2 */
 
@@ -371,30 +369,34 @@ buildjoin (char const *initialfile)
   i = 0;
   while (i < lastjoin)
     {
+#define ACCS(s)  accumulate_nonzero_bytes (SINGLE, s)
+#define ACCB(c)  accumulate_byte (SINGLE, c)
       /* Prepare marker for merge.  */
       if (i == 0)
-        bufscpy (&subs, targetdelta->num);
+        subs = intern0 (SINGLE, targetdelta->num);
       else
         {
-          bufscat (&subs, ",");
-          bufscat (&subs, joinlist[i - 2]);
-          bufscat (&subs, ":");
-          bufscat (&subs, joinlist[i - 1]);
+          ACCS (subs);
+          ACCB (',');
+          ACCS (joinlist[i - 2]);
+          ACCB (':');
+          ACCS (joinlist[i - 1]);
+          subs = finish_string (SINGLE, &len);
         }
       diagnose ("revision %s", joinlist[i]);
-      bufscpy (&commarg, "-p");
-      bufscat (&commarg, joinlist[i]);
-      cov[2] = commarg.string;
+      ACCS ("-p");
+      ACCS (joinlist[i]);
+      cov[2] = finish_string (SINGLE, &len);
       if (runv (-1, rev2, cov))
         goto badmerge;
       diagnose ("revision %s", joinlist[i + 1]);
-      bufscpy (&commarg, "-p");
-      bufscat (&commarg, joinlist[i + 1]);
-      cov[2] = commarg.string;
+      ACCS ("-p");
+      ACCS (joinlist[i + 1]);
+      cov[2] = finish_string (SINGLE, &len);
       if (runv (-1, rev3, cov))
         goto badmerge;
       diagnose ("merging...");
-      mergev[3] = subs.string;
+      mergev[3] = subs;
       mergev[5] = joinlist[i + 1];
       p = &mergev[6];
       if (BE (quiet))
@@ -408,15 +410,13 @@ buildjoin (char const *initialfile)
       if (DIFF_TROUBLE == runv (-1, NULL, mergev))
           goto badmerge;
       i = i + 2;
+#undef ACCB
+#undef ACCS
     }
-  bufautoend (&commarg);
-  bufautoend (&subs);
   return true;
 
 badmerge:
   LEX (erroneousp) = true;
-  bufautoend (&commarg);
-  bufautoend (&subs);
   return false;
 }
 
